# drumcore

./: .clang-format  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  nightly.yml
cmake/: drumcore-config.cmake.in  jk_warnings.cmake
include/drumcore/: constants.h  denormalguard.h  drumcore.h  drumgrid.h  drummapping.h  genremapper.h  lockfreequeue.h  seed.h  timesignature.h  version.h.in
tests/: constants_test.cpp  denormalguard_test.cpp  drumgrid_test.cpp  drummapping_test.cpp  genremapper_test.cpp  lockfreequeue_test.cpp  seed_test.cpp  timesignature_test.cpp  version_test.cpp
